se sube el codigo a la rama master

--- a/NewShoreTest/ClientApp/src/app/app.component.html
+++ b/NewShoreTest/ClientApp/src/app/app.component.html
@@ -1,9 +1,6 @@
-<div>
-  <app-search-form></app-search-form>
-</div>
-<!--<body>
+<body>
   <app-nav-menu></app-nav-menu>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
-</body>-->
+</body>
