--- a/NewShoreTest/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/NewShoreTest/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -1,12 +1,21 @@
+nav {
+  background-color: white
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
 }
 
+img {
+  width: 50%
+}
+
 html {
   font-size: 14px;
 }
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
