--- a/NewShoreTest/ClientApp/src/app/home/home.component.html
+++ b/NewShoreTest/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,41 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-  <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-  <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-  <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-  <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-  <li><strong>Angular CLI integration</strong>. In development mode, there's no need to run <code>ng serve</code>. It runs in the background automatically, so your client-side resources are dynamically built on demand and the page refreshes when you modify any file.</li>
-  <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
-</ul>
-<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
+<section class="slider">
+  <ul class="slides">
+    <li>
+      <img src="../../../assets/images/background1.jpg" class="image"> <!-- random image -->
+      <div class="caption center-align">
+        <h1 style="color:black">Enunciado1</h1>
+      </div>
+    </li>
+    <li>
+      <img src="../../../assets/images/background2.jpg" class="image"> <!-- random image -->
+      <div class="caption left-align">
+        <h2>Enunciado2</h2>
+      </div>
+    </li>
+    <li>
+      <img src="../../../assets/images/background3.jpg" class="image"> <!-- random image -->
+      <div class="caption right-align">
+        <h2>Enunciado3</h2>
+      </div>
+    </li>
+  </ul>
+</section>
+
+<div class="row">
+  <form class="col s12">
+    <div class="row">
+      <div class="input-field col s3">
+        <input id="Origin" type="text" class="validate">
+        <label for="origin">Origin</label>
+      </div>
+      <div class="input-field col s3">
+        <input id="Destination" type="text" class="validate">
+        <label for="Destination">Destination</label>
+      </div>
+      <div class="input-field col s3">
+        <input id="From" type="text" class="validate">
+        <label for="From">From</label>
+      </div>
+    </div>
+  </form>
+</div>
