--- a/NewShoreTest/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/NewShoreTest/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,41 +1,10 @@
-<header>
-  <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
-  >
-    <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">NewShoreTest</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target=".navbar-collapse"
-        aria-label="Toggle navigation"
-        [attr.aria-expanded]="isExpanded"
-        (click)="toggle()"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div
-        class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
-        [ngClass]="{ show: isExpanded }"
-      >
-        <ul class="navbar-nav flex-grow">
-          <li class="nav-item"
-              [routerLinkActive]="['link-active']"
-              [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/search-form']">Search</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+<nav>
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo"><img src="./../../assets/images/logo_newshore.png" /></a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a style="color:black" class="link-ref" href="sass.html">Sass</a></li>
+      <li><a style="color:black" class="link-ref" href="badges.html">Components</a></li>
+      <li><a style="color:black" href="collapsible.html">JavaScript</a></li>
+    </ul>
+  </div>
+</nav>
