--- a/NewShoreTest/ClientApp/src/styles.css
+++ b/NewShoreTest/ClientApp/src/styles.css
@@ -14,3 +14,12 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0
+}
