--- a/NewShoreTest/ClientApp/src/app/app.component.html
+++ b/NewShoreTest/ClientApp/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div>
-  <h1>Esta es la rama development</h1>
-  <app-search-form></app-search-form>
-</div>
+<body>
+  <app-nav-menu></app-nav-menu>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</body>
 
