--- a/NewShoreTest/ClientApp/src/app/home/home.component.html
+++ b/NewShoreTest/ClientApp/src/app/home/home.component.html
@@ -3,19 +3,19 @@
     <li>
       <img src="../../../assets/images/background1.jpg" class="image"> <!-- random image -->
       <div class="caption center-align">
-        <h1 style="color:black">Enunciado1</h1>
+        <h1 style="color:black">Your last-minute adventure awaits...</h1>
       </div>
     </li>
     <li>
       <img src="../../../assets/images/background2.jpg" class="image"> <!-- random image -->
       <div class="caption left-align">
-        <h2>Enunciado2</h2>
+        <h2>Where do you wish your next getaway?</h2>
       </div>
     </li>
     <li>
       <img src="../../../assets/images/background3.jpg" class="image"> <!-- random image -->
       <div class="caption right-align">
-        <h2>Enunciado3</h2>
+        <h2 style="color:black"> Change your trip not your desire to fly</h2>
       </div>
     </li>
   </ul>
@@ -26,11 +26,11 @@
     <div class="row">
       <div class="input-field col s3">
         <input id="Origin" type="text" class="validate">
-        <label for="origin">Origin</label>
+        <select for="origin">Origin</select>
       </div>
       <div class="input-field col s3">
         <input id="Destination" type="text" class="validate">
-        <label for="Destination">Destination</label>
+        <select for="Destination">Destination</select>
       </div>
       <div class="input-field col s3">
         <input id="From" type="text" class="validate">
@@ -38,4 +38,30 @@
       </div>
     </div>
   </form>
+  <button (click)="ShowTable(!bandera)" class="btn wav  es-effect waves-light" type="submit" name="action">
+    Search
+    <i class="material-icons">search</i>
+  </button>
 </div>
+
+<table *ngIf="bandera" class="highlight responsive-table">
+  <thead>
+    <tr>
+      <th>Origin</th>
+      <th>Destination</th>
+      <th>From</th>
+      <th>Flight number</th>
+      <th>Price</th>
+      <th>Currency</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr *ngFor="let c of lstFlight">
+      <td>{{c}}</td>
+      <td>{{c}}</td>
+      <td>{{c}}</td>
+    </tr>
+  </tbody>
+</table>
