--- a/NewShoreTest/ClientApp/src/app/home/home.component.html
+++ b/NewShoreTest/ClientApp/src/app/home/home.component.html
@@ -59,7 +59,7 @@
 
   <tbody>
     <tr *ngFor="let c of lstFlight | async">
-      <td>{{c}}</td>
+      <td>{{c.DepartureDate}}</td>
       <td>{{c}}</td>
       <td>{{c}}</td>
     </tr>
