--- a/NewShoreTest/ClientApp/src/app/home/home.component.html
+++ b/NewShoreTest/ClientApp/src/app/home/home.component.html
@@ -70,7 +70,7 @@
       <td>{{ destination }}</td>
       <td>{{ flightDate }}</td>
 
-      <td>{{ c.transport.flightNumber }}</td>
+      <td>{{ c.flightNumber }}</td>
       <td>{{ c.price }}</td>
       <td>{{ c.currency }}</td>
       <td><button class="btn btn-primary">Continuar</button></td>
