--- a/NewShoreTest/ClientApp/src/app/home/home.component.html
+++ b/NewShoreTest/ClientApp/src/app/home/home.component.html
@@ -73,7 +73,7 @@
       <td>{{ c.flightNumber }}</td>
       <td>{{ c.price }}</td>
       <td>{{ c.currency }}</td>
-      <td><button class="btn btn-primary">Continuar</button></td>
+      <td><button class="btn btn-primary" (click)="SaveFlight(c)">Continuar</button></td>
     </tr>
   </tbody>
 </table>
