--- a/NewShoreTest/ClientApp/src/app/home/home.component.html
+++ b/NewShoreTest/ClientApp/src/app/home/home.component.html
@@ -26,14 +26,12 @@
     <div class="row">
       <div class="input-field col s3">
         <ng-multiselect-dropdown [placeholder]="'Origin'" [data]="lstcities"
-                                 [(ngModel)]="origin" [settings]="dropdownSettings" name="origin"
-                                 (onSelect)="onItemSelect($event)">
+                                 [(ngModel)]="origin" [settings]="citiesSettings" name="origin">
         </ng-multiselect-dropdown>
       </div>
       <div class="input-field col s3">
         <ng-multiselect-dropdown [placeholder]="'Destination'" [data]="lstcities"
-                                 [(ngModel)]="destination" [settings]="dropdownSettings" name="destination"
-                                 (onSelect)="onItemSelect($event)">
+                                 [(ngModel)]="destination" [settings]="citiesSettings" name="destination">
         </ng-multiselect-dropdown>
       </div>
       <div class="input-field col s3">
@@ -41,17 +39,17 @@
       </div>
     </div>
   </form>
-  <button *ngIf="!bandera" (click)="GetFlights()" class="btn wav  es-effect waves-light" [disabled]="!formValid()">
+  <button *ngIf="!bandera" (click)="GetFlights()" class="btn wav es-effect waves-light" [disabled]="!formValid()">
     Search
     <i class="material-icons">search</i>
   </button>
-  <button *ngIf="bandera" (click)="LimpiarBusqueda()" class="btn wav es-effect waves-green">
-    Clear
-    <i class="material-icons">refresh</i>
+  <button *ngIf="bandera" (click)="GetFlights()" class="btn wav es-effect waves-green">
+    Search
+    <i class="material-icons">search</i>
   </button>
 </div>
 
-<table *ngIf="bandera" class="highlight responsive-table">
+<table *ngIf="bandera" class="highlight responsive-table centered" >
   <thead>
     <tr>
       <th>Origin</th>
@@ -79,7 +77,4 @@
   </tbody>
 </table>
 
-<div>
-
-</div>
 
