Logging with NLog

--- a/NewShoreTest/ClientApp/src/app/home/home.component.html
+++ b/NewShoreTest/ClientApp/src/app/home/home.component.html
@@ -39,7 +39,7 @@
       </div>
     </div>
   </form>
-  <button *ngIf="!bandera" (click)="GetFlights()" class="btn wav es-effect waves-light" [disabled]="!formValid()">
+  <button *ngIf="!bandera" (click)="GetFlights()" class="btn wav es-effect waves-light">
     Search
     <i class="material-icons">search</i>
   </button>
