--- a/NewShoreTest/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/NewShoreTest/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -2,6 +2,10 @@ nav {
   background-color: white
 }
 
+#about {
+  color: black;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
