Unit test whit NUnit, final upgrade

--- a/NewShoreTest/ClientApp/src/app/home/home.component.html
+++ b/NewShoreTest/ClientApp/src/app/home/home.component.html
@@ -49,7 +49,7 @@
   </button>
 </div>
 
-<table *ngIf="bandera" class="highlight responsive-table centered">
+<table *ngIf="flag" class="highlight responsive-table centered">
   <thead>
     <tr>
       <th>Origin</th>
